feat(user): user scaffold
