# backend/routers/router.go
@@ -15,16 +15,7 @@ import (
 
 func init() {
 	ns := beego.NewNamespace("/v1",
-		beego.NSNamespace("/object",
-			beego.NSInclude(
-				&controllers.ObjectController{},
-			),
-		),
-		beego.NSNamespace("/user",
-			beego.NSInclude(
-				&controllers.UserController{},
-			),
-		),
+		beego.NSNamespace("/user", beego.NSInclude(&controllers.UserController{})),
 	)
 	beego.AddNamespace(ns)
 	beego.Router("/ws", &controllers.WebSocketController{})
